--- a/xType/index.html
+++ b/xType/index.html
@@ -24,9 +24,9 @@
       let strArr = str.split('');
       let strHTML = '';
       let count = 0;
-      let enableTyping = false;
+      let isTypingEnabled = false;
       let typingArea = document.querySelector('#typingArea');
-      let toggleTyping = document.querySelector('#toggleTyping');
+      let toggleTypingBtn = document.querySelector('#toggleTyping');
 
       // convert string array to html
       strArr.forEach(letter => {
@@ -44,47 +44,52 @@
 
 
       var checkTyping = function(e) {
-        console.log(toggleTyping);
+        console.log(isTypingEnabled);
         // select active letter
         let active = document.querySelector('#typingArea span.active');
-
-        // check if we reached last letter or not
-        if(count < str.length-1) {
-          count++;
-          // add active class to next element
-          active.nextSibling.classList.add('active');
-          // if active letter is equal to typed letter
-          if(active.innerHTML == e.key) {
-              active.classList.add('success');
-              active.classList.remove('active');
-              // if active letter is not equal to typed letter
-          } else if(active.innerHTML != e.key) {
-              active.classList.add('error');
-              active.classList.remove('active');
+        // run only if typing is enabled
+        if(isTypingEnabled) {
+          // check if we reached last letter or not
+          if(count < str.length-1) {
+            count++;
+            // add active class to next element
+            active.nextSibling.classList.add('active');
+            // if active letter is equal to typed letter
+            if(active.innerHTML == e.key) {
+                active.classList.add('success');
+                active.classList.remove('active');
+                // if active letter is not equal to typed letter
+            } else if(active.innerHTML != e.key) {
+                active.classList.add('error');
+                active.classList.remove('active');
+            }
+            // if we reached last letter
+          } else {
+            active.classList.remove('active');
+            if(active.innerHTML == e.key) {
+                active.classList.add('success');
+            } else if(active.innerHTML != e.key) {
+                active.classList.add('error');
+            }
+            setTimeout(function(){ alert("DONE!"); })
+            document.removeEventListener('keyup', checkTyping, false);
           }
-          // if we reached last letter
-        } else {
-          active.classList.remove('active');
-          if(active.innerHTML == e.key) {
-              active.classList.add('success');
-          } else if(active.innerHTML != e.key) {
-              active.classList.add('error');
-          }
-          setTimeout(function(){ alert("DONE!"); })
-          document.removeEventListener('keyup', checkTyping, false);
         }
       }
       var toggleTyping = function() {
-        if(!toggleTyping) {
-          toggleTyping = !toggleTyping;
-          toggleTyping.innerHTML = 'stop';
+        // if typing is not enabled
+        if(!isTypingEnabled) {
+          isTypingEnabled = !isTypingEnabled;
+          toggleTypingBtn.innerHTML = 'Stop Typing';
+          document.addEventListener('keyup', checkTyping, false);
         } else {
-          toggleTyping = !toggleTyping;
-          toggleTyping.innerHTML = 'start';
+          isTypingEnabled = !isTypingEnabled;
+          toggleTypingBtn.innerHTML = 'Start Typing';
         }
+        console.warn(isTypingEnabled);
       }
-      document.addEventListener('keyup', checkTyping, false);
-      toggleTyping.addEventListener('click', () => { enableTyping = true }, false);
+
+      toggleTypingBtn.addEventListener('click', toggleTyping, false);
     </script>
   </body>
 </html>
