--- a/workshop/drag-n-drop-2.html
+++ b/workshop/drag-n-drop-2.html
@@ -33,7 +33,7 @@
     </div>
     <div class="box" id="deleteZone">
       <h1>Delete</h1>
-      <p>>> Drag any image here to delete it.</p>
+      <p>→ Drag any image here to delete it.</p>
     </div>
 
     <script>
