file reader 2 examples added

--- a/workshop/drag-n-drop-2.html
+++ b/workshop/drag-n-drop-2.html
@@ -25,11 +25,11 @@
     <h1>Drag and Drop Example - 2</h1>
     <div class="box" id="dragZone">
       <h1>Source</h1>
-      <img class="source" id="book" src="images/book.png" draggable="true">
-      <img class="source" id="bag" src="images/bag.png" draggable="true">
-      <img class="source" id="bus" src="images/bus.png" draggable="true">
-      <img class="source" id="calculator" src="images/calculator.png" draggable="true">
-      <img class="source" id="clock" src="images/clock.png" draggable="true">
+      <img class="source" id="book" src="assets/book.png" draggable="true">
+      <img class="source" id="bag" src="assets/bag.png" draggable="true">
+      <img class="source" id="bus" src="assets/bus.png" draggable="true">
+      <img class="source" id="calculator" src="assets/calculator.png" draggable="true">
+      <img class="source" id="clock" src="assets/clock.png" draggable="true">
     </div>
     <div class="box" id="deleteZone">
       <h1>Delete</h1>
