--- a/xType/xType.html
+++ b/xType/xType.html
@@ -15,25 +15,25 @@
         background: orange;
       }
       #typingArea {
-        font-size: 70px;
+        font-size: 30px;
       }
       .active { background: lightblue; }
       .success { color: #d5d5d5; }
-      .error { background: yellow; }
+      .error { background: rgba(255, 0, 0, 0.5); }
     </style>
   </head>
   <body>
     <a id="toggleTypingBtn">Start Typing</a>
     <div id="timerArea">
-      <h1 class="display__time-left">01:00</h1>
+      <h1 class="display__time-left"></h1>
     </div>
     <!-- container for letters -->
     <div id="typingArea"></div> <!-- {1} -->
 
     <script type="text/javascript">
-      let isTypingEnabled, count, countdown = null;
+      let isTypingEnabled, count, time, countdown = null;
       // string to be typed
-      const str = 'js is.';
+      const str = "this is a simple paragraph that is meant to be nice and easy to type which is why there will be mommas no periods or any capital letters so i guess this means that it cannot really be considered a paragraph but just a series of run on sentences this should help you get faster at typing as im trying not to use too many difficult words in it although i think that i might start making it hard by including some more difficult letters I'm typing pretty quickly so forgive me for any mistakes i think that i will not just tell you a story about the time i went to the zoo and found a monkey and a fox playing together they were so cute and i think that they were not supposed to be in the same cage but they somehow were and i loved watching them horse around forgive the pun well i hope that it has been highly enjoyable typing this paragraph and i wish you the best of luck getting the best score that you possibly can.";
       // convert string to array
       const strArr = str.split('');
       const timerArea = document.querySelector('#timerArea');
@@ -42,11 +42,37 @@
       const toggleTypingBtn = document.querySelector('#toggleTypingBtn');
 
       // FUNCTIONS
-      function displayTimeLeft(seconds) {
+      var generateText = function() {
+        seconds = 10;
+        count = 0;
+        let strHTML = '';
+        isTypingEnabled = false;
+        displayTimeLeft(seconds);
+        // convert string array to html
+        strArr.forEach(letter => {
+          strHTML += `<span class="letter">${letter}</span>`
+        })
+        // put generated html into its container {1}
+        typingArea.innerHTML = strHTML;
+        // select all letters
+        let letters = document.querySelectorAll('#typingArea span');
+        // select last letter
+        let last = document.querySelectorAll('#typingArea span')[str.length-1];
+        // add active class to firt letter
+        letters[0].classList.add('active');
+      };
+      var displayTimeLeft = function(seconds) {
         const minutes = Math.floor(seconds / 60);
         const remainderSeconds = seconds % 60;
         const display = `${minutes}:${remainderSeconds < 10 ? '0' : '' }${remainderSeconds}`;
         timerDisplay.textContent = display;
+        if(seconds == 0) {
+          setTimeout(function(){ alert("DONE!"); });
+          generateText();
+          toggleTypingBtn.classList.remove('active');
+          toggleTypingBtn.innerHTML = 'Start Typing Again';
+          document.removeEventListener('keyup', checkTyping, false);
+        }
       }
       var timer = function(seconds) {
         // clear any existing timers
@@ -67,23 +93,6 @@
           displayTimeLeft(secondsLeft);
         }, 1000);
       }
-      var generateText = function() {
-        count = 0;
-        let strHTML = '';
-        isTypingEnabled = false;
-        // convert string array to html
-        strArr.forEach(letter => {
-          strHTML += `<span class="letter">${letter}</span>`
-        })
-        // put generated html into its container {1}
-        typingArea.innerHTML = strHTML;
-        // select all letters
-        let letters = document.querySelectorAll('#typingArea span');
-        // select last letter
-        let last = document.querySelectorAll('#typingArea span')[str.length-1];
-        // add active class to firt letter
-        letters[0].classList.add('active');
-      };
       var checkTyping = function(e) {
         // select active letter
         let active = document.querySelector('#typingArea span.active');
@@ -120,7 +129,7 @@
         }
       }
       var startTyping = function() {
-        timer(60);
+        timer(seconds);
         toggleTypingBtn.classList.add('active');
         toggleTypingBtn.innerHTML = 'Stop Typing';
         document.addEventListener('keyup', checkTyping, false);
@@ -145,6 +154,7 @@
           isTypingEnabled = !isTypingEnabled;
         }
       }
+      
       // EVENT LISTENERS
       generateText();
       toggleTypingBtn.addEventListener('click', toggleTyping, false);
