app structure understood

--- a/workshop/app/index.html
+++ b/workshop/app/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title>Title</title>
+	<title>Brick Breakout Game</title>
 
 	<link rel="stylesheet" href="css/style.css">
-
-
 </head>
 <body>
 	<div class="top">
@@ -17,7 +11,7 @@
 			<h1 class="heading">HMTL5 Brick Breakout Game</h1>
 		</div>
 		<div class="right">
-			<h1 class="settings">Short Info</h1>
+			<h1 class="settings">Scoreboard</h1>
 		</div>
 		<div class="clearfix"></div>
 	</div>
@@ -35,27 +29,8 @@
 			</div>
 		</div>
 		<div class="right">
-			<div class="section">
-				<h3 class="setting-heading">Brick Types</h3>
-				<div class="brick-type normal">
-					<span class="color"></span>
-					<span class="name">Normal</span>
-				</div>
-				<div class="brick-type hard">
-					<span class="color"></span>
-					<span class="name">Hard</span>
-				</div>
-				<div class="brick-type ball-power">
-					<span class="color"></span>
-					<span class="name">Ball PowerUP</span>
-				</div>
-				<div class="brick-type paddle-power">
-					<span class="color"></span>
-					<span class="name">Paddle PowerUP</span>
-				</div>
-			</div>
  			<div class="section">
-				<h3 class="setting-heading">Last Five Scores</h3>
+				<h3 class="setting-heading">Score Summary</h3>
 				<table>
 					<tr>
 						<th>Player</th>
@@ -84,7 +59,7 @@
 				</table>
 			</div>
 			<div class="credits">
-				<p>Game by Rakesh Kumar</p>
+				<p>Game by xLab</p>
 			</div>
 		</div>
 		<div class="clearfix"></div>
