--- a/workshop/constructor.html
+++ b/workshop/constructor.html
@@ -12,7 +12,8 @@
     function Movie(name, rating) {
         this.name = name;
         this.rating = rating;
-        this.info = function () {
+        // this.language = "English";  // {1*}
+        this.info = function () {  // {2*}
             return this.name + " " + this.rating + " " + this.language;
         };
     }
@@ -21,16 +22,30 @@
     var pk = new Movie('PK', 8.2)
 
     // Adding a Property to an Object
-    lucy.language = "English";
+    lucy.language = "English";  // {1}
 
     // Adding a Method to an Object
-    lucy.info = function () {
-        return this.name + " " + this.rating + " " + this.language;
+    lucy.info = function () {  // {2}
+      return this.name + " " + this.rating + " " + this.language;
     };
+
+    // We can not add a new property and method to an existing object constructor like {1} & {2}
+    // To add a new property to a constructor, you must add it to the constructor function {1*} & {2*}
+    // Movie.language = "English";
+    // Movie.info = function () {  // {2}
+    //   return this.name + " " + this.rating + " " + this.language;
+    // };
+
+    // The JavaScript prototype property allows you to add new properties and methods to object constructors.
+    // Movie.prototype.language = "English";
+    // Movie.prototype.info = function () {  // {2}
+    //   return this.name + " " + this.rating + " " + this.language;
+    // };
+
 
     // Display language
     console.log(lucy.info())
-    console.log(pk.info())
+    console.log(pk.info()) // language undefined for pk Object
 
     // Built-in JavaScript Constructors
     // var x1 = new Object();    // A new Object object
