workshop file updated

--- a/workshop/ajax.html
+++ b/workshop/ajax.html
@@ -18,7 +18,7 @@
           loadContentArea.innerHTML = this.responseText;
         }
       };
-      xhttp.open("GET", "assets/demo-lg.html", true);
+      xhttp.open("GET", "assets/demo-sm.html", true);
       xhttp.send();
     }
   </script>
