--- a/workshop/dom.html
+++ b/workshop/dom.html
@@ -7,10 +7,18 @@
   <title>DOM Scripting</title>
 </head>
 <body>
+  <h1 id="heading">Hi</h1>
   <script>
   		// get references
   		document.getElementById('heading');
   		document.getElementsByClassName('text')[0];
+      document.querySelector('#heading');
+      document.querySelectorAll('#heading');
+
+      document.getElementById('heading').innerHTML = 'How are you?';
+      // Attributes (get, set, remove)
+      // Add remove class names
+      // 
   </script>
 </body>
 </html>
