--- a/projects/todo-localstorage.html
+++ b/projects/todo-localstorage.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
+    li {
+      list-style: none;
+    }
     .done {
       text-decoration: line-through;
       color: grey;
